# circle_pattern_processor

./: DEVELOPMENT_GUIDE.md  README.md  __init__.py  circle_detector.py  move-repo.ps1  pyproject.toml  svg_exporter.py
.github/workflows/: publish.yml
workflow/: circle_pattern2svg.json
